--- a/haruhi/public/prod.css
+++ b/haruhi/public/prod.css
@@ -1,6 +1,6 @@
 :root {
-    --color-base: #fffbec;
-    --color-primary: #c6bceb;
-    --color-primary-sub: #7f48c7;
+    --color-base: #f3f9f9;
+    --color-primary: #7fc4c1;
+    --color-primary-sub: #7e9cab;
     --color-secondary: #fffbec;
 }
