--- a/haruhi/public/stag.css
+++ b/haruhi/public/stag.css
@@ -1,6 +1,6 @@
 :root {
     --color-base: #fffbec;
-    --color-primary: #c6bceb;
-    --color-primary-sub: #7f48c7;
+    --color-primary: #eec800;
+    --color-primary-sub: #e2841a;
     --color-secondary: #fffbec;
 }
