--- a/haruhi/public/main.css
+++ b/haruhi/public/main.css
@@ -121,3 +121,43 @@ a {
 a:visited {
     color: #000000;
 }
+
+select {
+    font-size: 1em;
+    border-radius: 10px;
+}
+
+input {
+    font-size: 1em;
+}
+
+.confirm-button {
+    background: #101a22;
+}
+
+.edit-button {
+    background: #67b3f1;
+    border: none;
+    border-radius: 10px;
+    font-size: 14px;
+    padding: 10px;
+    width: 100px;
+}
+
+.cancel-button {
+    background: #4cb308;
+    border: none;
+    border-radius: 10px;
+    font-size: 14px;
+    padding: 10px;
+    width: 100px;
+}
+
+.delete-button {
+    background: #be1010;
+    border: none;
+    border-radius: 10px;
+    font-size: 14px;
+    padding: 10px;
+    width: 100px;
+}
